created new TestShop.class with  static method which create a new Shop for testing